--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -13,14 +13,14 @@
 
         <android.gesture.GestureOverlayView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/gesture_ir"
-            android:layout_weight="2"></android.gesture.GestureOverlayView>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/gesture_ir">
+        </android.gesture.GestureOverlayView>
 
         <TableLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <TableRow
                 android:layout_width="fill_parent"
