--- a/app/src/main/res/layout/custom_connection.xml
+++ b/app/src/main/res/layout/custom_connection.xml
@@ -6,8 +6,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/server_ip"
-        android:hint="@string/server_ip" />
+        android:id="@+id/server_address"
+        android:hint="@string/server_address" />
 
     <EditText
         android:layout_width="match_parent"
