--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -12,10 +12,10 @@
 
         <RadioGroup
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:id="@+id/group_server"
-            android:focusableInTouchMode="false"></RadioGroup>
+            android:focusableInTouchMode="false"/>
 
         <LinearLayout
             android:orientation="horizontal"
